tests/security/var_dump/output.txt
ERROR: TaintedData - input.hack:1:10 - Detected tainted HTML tags in path $_GET --ExpressionFetch(ArrayValue, "name")--> $_GET['name'] (input.hack:1:10) --Default--> call to var_dump (input.hack:1:10) --Default--> var_dump#1 (input.hack:1:10)